<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Add your social accounts !</string>
	<string name="app_name">VTI</string>
	<string name="twitter">Twitter</string>
	<string name="facebook">Facebook</string>
	<string name="buzz">Buzz</string>
	
	<string name="publish">Publish</string>
	<string name="settings">Settings</string>
	<string name="about_us">About Us</string>
	<string name="follow_unfollow">Follow/Unfollow</string>
	
	<string name="notifications">Notifications</string>

	<string name="apply">Apply</string>
	<string name="cancel">Cancel</string>
	<string name="signout">Sign Out</string>
	
	<string name="follow">Follow</string>
	<string name="unfollow">UnFollow</string>
	
	
	<string name="about_us_txt">VTI is a crowd-sourcing real-tie traveler information pub/sub application implemented by Sol Ma. </string>
	<string name="route">Route</string>
	<string name="map_api_key">08aJscbbtIL1_gdkwk1rE2a03Tqi80IqWLO4nxQ</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="saveroute">Save Last Subscribed Route</string>
	<string name="subscribe">Subscribe this route</string>
	<string name="unsubscribe">Unsubscribe last route</string>
	<string name="feedback">FeedBack</string>
	<string name="help">Help</string>
</resources>
